agregamos imagenes y tipografia

--- a/mokepon/styles.css
+++ b/mokepon/styles.css
@@ -1,8 +1,9 @@
-.titulo {
-    color: hotpink;
-    width: 320px;
-    height: 50px;
-    background-color: teal;
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+
+body {
+    font-family: 'Silkscreen', cursive;
+    background-color: #00E7FF;
+
 }
 
 #seleccionar-mascota { 
@@ -12,19 +13,54 @@
     align-items: center
 }
 
+.titulo {
+    color: white;
+    font-size: 70px;   
+    font-family: 'Silkscreen', cursive;
+
+}
+
+.subtitulo {
+    color: white;
+    font-size: 24px;
+}
+
 .tarjetas {
     display:flex;
+    gap: 10px;
+    
 }
 
 .tarjeta-de-mokepon {
-    width: 100px;
+    width: 190px;
     height: 100px;
-    background: aquamarine;
+    background: #FFA41B;
     padding: 10px;
     box-sizing: border-box;
+    border-radius: 20px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    color: white
+}
+
+.tarjeta-de-mokepon img {
+    width: 80px;
+}
+
+#boton-mascota {
+    width: 180px;
+    height: 40px;
+    border-radius: 20px;
+    background: transparent;
+    border: 2px solid white;
+    color: white;
+    font-family: 'Silkscreen', cursive;
+    margin-top: 30px;
 
 }
+
 input {
-    display: "none";
-    gap: 10px;
+    display: none;
+    
 }
