--- a/mokepon/styles.css
+++ b/mokepon/styles.css
@@ -41,7 +41,8 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
-    color: white
+    color: white;
+    cursor: pointer;
 }
 
 .tarjeta-de-mokepon img {
@@ -57,10 +58,26 @@ body {
     color: white;
     font-family: 'Silkscreen', cursive;
     margin-top: 30px;
-
 }
 
 input {
     display: none;
     
+}
+
+#seleccionar-ataque {
+    flex-direction: column;
+    align-items: center;
+}
+
+.boton-de-ataque {
+    background-color: #FFA41B;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    border-color: transparent;
+    width: 110px;
+    color: white;
+    font-family: 'Silkscreen', cursive;
+
 }
