--- a/mokepon/styles.css
+++ b/mokepon/styles.css
@@ -122,6 +122,16 @@ button {
     text-align: center;
 }
 
+#ver-mapa {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#mapa {
+    border: 2px solid white;
+}
+
 @media (max-width: 600px) {
    .tarjetas, .tarjetas-ataques {
     flex-direction: column;
